--- a/app/popup.html
+++ b/app/popup.html
@@ -15,13 +15,17 @@
   <body>
 
     <div ng-controller="MainController">
-        <h1>Hey! {{welcomeMsg}}</h1>
+        <h1>Add a world clock</h1>
+         <select ng-model="myselect" ng-options="o as o for o in zones"><option value="">Select</option></select>
+
         <button class="btn btn-info" ng-click="contribute()">Contribute</button>
     </div>
 
     <!-- build:js popup.js -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/moment/min/moment-with-locales.min.js"></script>
+    <script src="bower_components/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="/scripts/app/modules/angular-underscore.min.js"></script>
